--- a/assets/css/color.css
+++ b/assets/css/color.css
@@ -90,7 +90,7 @@ nav > div ul ul li a:focus,
 .mnu-cntr ul ul > li:hover > a,
 .mnu-cntr ul ul > li a:focus
 {
-	background-color: #833dcc;
+	background-color: #e2bd20;
 }
 
 
