--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1091,7 +1091,7 @@ header.style3 {top: -40px;}
   width: 100%;
   line-height: 0;
   padding: 0 50px 0 30px;
-  background-color: rgb(14, 13, 13);
+  background-color:#22be32;
  
 }
 .tp-lst {
