--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3278,7 +3278,7 @@ footer {
 .btm-br {
   float: left;
   width: 100%;
-  background-color: #00C1DE;
+  background-color: #3DAE2B;
   padding: 19px 0;
 }
 .btm-br p {
