--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1090,7 +1090,7 @@ header.style3 {top: -40px;}
   width: 100%;
   line-height: 0;
   padding: 0 0px 0 30px;
-  background-color:#3DAE2B;
+  background-color:white;
  
 }
 .tp-lst {
