--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -139,7 +139,7 @@ h1,h2,h3,h4,h5,h6 {
   font-family: poppins;
   color: #252525;
   letter-spacing: 0;
-  font-weight: 700;
+  font-weight: 500;
 }
 p {
   font-family: open sans;
@@ -283,7 +283,7 @@ section {
 .wht-bg {background-color: #fff;}
 .gray-bg {background-color: #f5f5f5;}
 .gray-bg2 {background-color: #f5f9fa;}
-.drk-bg {background-color: #00C1DE;}
+.drk-bg {background-color: #333333ba;}
 .drk-bg2 {background-color: #2b2d2e;}
 .drk-bg3 {background-color: #141414;}
 .drk-bg4 {background-color: #1e1e1e;}
@@ -3238,7 +3238,7 @@ footer {
   font-size: 13px;
   margin-bottom: 0;
   max-width: 90%;
-  font-weight: 600;
+  font-weight: 0;
 }
 .drk-bg .wdgt-inf > h4 {color: #fff;}
 .wdgt-inf > span {
