--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -283,11 +283,11 @@ section {
 .wht-bg {background-color: #fff;}
 .gray-bg {background-color: #f5f5f5;}
 .gray-bg2 {background-color: #f5f9fa;}
-.drk-bg {background-color: #333333ba;}
+.drk-bg {background-color: #013b61;}
 .drk-bg2 {background-color: #2b2d2e;}
 .drk-bg3 {background-color: #141414;}
 .drk-bg4 {background-color: #1e1e1e;}
-.drk-blu-bg {background-color: #1f2845;}
+.drk-blu-bg {background-color: #013b61;}
 .container {
   padding: 0;
   max-width:1170px;
@@ -2398,7 +2398,7 @@ body.sticky-active .sticky-header {
 .sec-title {
   float: left;
   width: 100%;
-  margin-bottom: 55px;
+  margin-bottom: 20px;
   position: relative;
   z-index: 1;
 }
@@ -3201,7 +3201,7 @@ footer {
   margin-bottom: 30px;
   font-size: 18px;
 }
-.drk-bg .wdgt > h4 {color: #000000;}
+.drk-bg .wdgt > h4 {color: #28a745;}
 .wdgt-pst-wrp {
   float: left;
   width: 100%;
@@ -3277,7 +3277,7 @@ footer {
 .btm-br {
   float: left;
   width: 100%;
-  background-color: #00C1DE;
+  background-color: #013b61;
   padding: 19px 0;
 }
 .btm-br p {
@@ -3505,7 +3505,7 @@ footer {
   font-size: 14px;
   text-transform: uppercase;
   font-weight: 500;
-  color: #666;
+  color: #fff;
   font-family: poppins;
   letter-spacing: 1px;
 }
