--- a/utico_new/assets/css/style.css
+++ b/utico_new/assets/css/style.css
@@ -923,7 +923,7 @@ nav > div ul li.menu-item-has-children:hover > .mga-mnu {
 .logo {display: inline-block;}
 .logo > a {
   display: block;
-  padding: 3px 0;
+  padding: 0px 0;
 }
 .scl-btns {
   display: inline-block;
@@ -1116,27 +1116,35 @@ header.style3 {top: -40px;}
 }
 .hdr-srch > form input {
   float: left;
-  width: 80px;
+  width: 150px;
   background-color: transparent;
   font-weight: 600;
-  font-size: 13px;
+  font-size: 16px;
   font-family: poppins;
   letter-spacing: .5px;
   padding-left: 25px;
   height: 40px;
+  background-color: #d5d5d563;
+  border:2px solid;
+  border-radius: 25px;
   color: #696969;
 }
 .hdr-srch > form button {
   position: absolute;
-  left: 0;
+  /* left: 0; */
   font-size: 12px;
   background-color: transparent;
   top: 0;
   padding: 0;
+  right:5px;
   bottom: 0;
-  color: #696969;
+  background-color: #22be32;
+  color: #fff;
+  margin-bottom: 5px;
+  margin-top: 6px;
+  border-radius: 100px;
   width: 25px;
-  padding-right: 8px;
+  /* padding-right: 8px; */
 }
 .hdr-srch:hover > form input, 
 .hdr-srch > form input:focus {
