--- a/new/assets/css/style.css
+++ b/new/assets/css/style.css
@@ -1089,7 +1089,7 @@ header.style3 {top: -40px;}
   float: left;
   width: 100%;
   line-height: 0;
-  padding: 0 0px 0 30px;
+  padding: 17px 0px 17px 30px;
   background-color:white;
  
 }
