--- a/utico_new/assets/css/style.css
+++ b/utico_new/assets/css/style.css
@@ -285,7 +285,7 @@ section {
 .drk-bg2 {background-color: #2b2d2e;}
 .drk-bg3 {background-color: #141414;}
 .drk-bg4 {background-color: #1e1e1e;}
-.drk-blu-bg {background-color: #1f2845;}
+.drk-blu-bg {background-color: #013b61;}
 .container {
   padding: 0;
   max-width:1170px;
