--- a/assets/css/revolution/navigation.css
+++ b/assets/css/revolution/navigation.css
@@ -511,8 +511,8 @@ website:    http://www.themepunch.com
   cursor:pointer;
   background:#000;
   background:rgba(0,0,0,0.5);
-  min-width:70px;
-  min-height:70px;
+  min-width:50px;
+  min-height:50px;
   position:absolute;
   display:block;
   z-index:1000;
@@ -524,7 +524,7 @@ website:    http://www.themepunch.com
   font-size:20px;
   color:#fff;
   display:block;
-  line-height: 70px;
+  line-height: 50px;
   text-align: center;    
   z-index:2;
   position:relative;
@@ -542,8 +542,9 @@ website:    http://www.themepunch.com
   display:inline-block;
   background:#000;
   background:rgba(0,0,0,0.5);
-  min-height:70px;
-  line-height:70px;
+  min-height:50px;
+  max-height: 50px;
+  line-height:50px;
   top:0px;
   margin-left:0px;
   border-radius:35px;
@@ -591,7 +592,7 @@ website:    http://www.themepunch.com
   color:#fff;
   font-weight:600;
   font-size:13px;
-  line-height:70px;
+  line-height:50px;
   white-space:nowrap;
   padding:0px 20px;
   margin-left:11px;
