--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5879,8 +5879,8 @@ footer {
 .ceo-msg-inr > h2 + p {margin-top: 20px;}
 .ceo-msg-inr > p {
   margin-bottom: 0;
-  font-style: italic;
-  font-size: 22px;
+  font-family: 'Montserrat';
+  font-size: 21px;
   color: #3c3c3c;
   line-height: 31px;
   max-width: 85%;
@@ -5940,6 +5940,7 @@ footer {
   float: left;
   width: 100%;
   color: #fff;
+  font-family: 'Montserrat';
   font-size: 17px;
   font-weight: 700;
   padding-left: 50px;
