--- a/uticonew/assets/css/style.scss
+++ b/uticonew/assets/css/style.scss
@@ -1898,40 +1898,40 @@ Main Banner Area CSS
 }
 .item-bg1 {
     background: {
-        image: url(../../assets/img/main-banner-image/1.jpg);
+        image: url(../../assets/img/slide2.jpg);
     };
 }
 .item-bg2 {
     background: {
-        image: url(../../assets/img/main-banner-image/2.jpg);
+        image: url(../../assets/img/slide2.jpg);
         position: right top !important;
     };
 }
 .item-bg3 {
     background: {
-        image: url(../../assets/img/main-banner-image/3.jpg);
+        image: url(../../assets/img/slide2.jpg);
         position: center top !important;
     };
 }
 .item-bg4 {
     background: {
-        image: url(../../assets/img/main-banner-image/4.jpg);
+        image: url(../../assets/img/slide2.jpg);
         position: top left!important;
     };
 }
 .item-bg5 {
     background: {
-        image: url(../../assets/img/main-banner-image/5.jpg);
+        image: url(../../assets/img/slide2.jpg);
     };
 }
 .item-bg6 {
     background: {
-        image: url(../../assets/img/main-banner-image/6.jpg);
+        image: url(../../assets/img/slide2.jpg);
     };
 }
 .item-bg7 {
     background: {
-        image: url(../../assets/img/main-banner-image/7.jpg);
+        image: url(../../assets/img/slide2.jpg );
     };
 }
 .banner-section {
@@ -3019,7 +3019,7 @@ Why Choose Us Area CSS
 .why-choose-us-content {
     background: {
         color: $black-color;
-        image: url(../../assets/img/why-choose-bg.jpg);
+        image: url(../../assets/img/c3.jpg);
         position: right center;
         size: cover;
         repeat: no-repeat;
@@ -4172,12 +4172,12 @@ Our Mission Area CSS
     };
     &.bg-1 {
         background: {
-            image: url(../../assets/img/mission-img1.jpg);
+            image: url(../../assets/img/v2.jpg);
         };
     }
     &.bg-2 {
         background: {
-            image: url(../../assets/img/mission-img2.jpg);
+            image: url(../../assets/img/v1.jpg);
         };
     }
     img {
