--- a/uticonew/assets/css/style.css
+++ b/uticonew/assets/css/style.css
@@ -1807,34 +1807,34 @@ Main Banner Area CSS
 }
 
 .item-bg1 {
-  background-image: url(../../assets/img/main-banner-image/1.jpg);
+  background-image: url(https://webeefy.com/uticome2/assets/images/slider/slider1.jpg);
 }
 
 .item-bg2 {
-  background-image: url(../../assets/img/main-banner-image/2.jpg);
+  background-image: url(https://webeefy.com/uticome2/assets/images/slider/slider2.jpg);
   background-position: right top !important;
 }
 
 .item-bg3 {
-  background-image: url(../../assets/img/main-banner-image/3.jpg);
+  background-image: url(https://webeefy.com/uticome2/assets/images/slider/slider1.jpg);
   background-position: center top !important;
 }
 
 .item-bg4 {
-  background-image: url(../../assets/img/main-banner-image/4.jpg);
+  background-image: url(https://webeefy.com/uticome2/assets/images/slider/slider2.jpg);
   background-position: top left !important;
 }
 
 .item-bg5 {
-  background-image: url(../../assets/img/main-banner-image/5.jpg);
+  background-image: url(https://webeefy.com/uticome2/assets/images/slider/slider1.jpg);
 }
 
 .item-bg6 {
-  background-image: url(../../assets/img/main-banner-image/6.jpg);
+  background-image: url(https://webeefy.com/uticome2/assets/images/slider/slider2.jpg);
 }
 
 .item-bg7 {
-  background-image: url(../../assets/img/main-banner-image/7.jpg);
+  background-image: url(https://webeefy.com/uticome2/assets/images/slider/slider1.jpg);
 }
 
 .banner-section {
