--- a/uticonew/assets/css/style.scss
+++ b/uticonew/assets/css/style.scss
@@ -1898,40 +1898,40 @@ Main Banner Area CSS
 }
 .item-bg1 {
     background: {
-        image: url(../../assets/img/slide2.jpg);
+        image: url(https://webeefy.com/uticome2/assets/images/slider/slide1.jpg);
     };
 }
 .item-bg2 {
     background: {
-        image: url(../../assets/img/slide2.jpg);
+        image: url(https://webeefy.com/uticome2/assets/images/slider/slide2.jpg);
         position: right top !important;
     };
 }
 .item-bg3 {
     background: {
-        image: url(../../assets/img/slide2.jpg);
+        image: url(https://webeefy.com/uticome2/assets/images/slider/slider1.jpg);
         position: center top !important;
     };
 }
 .item-bg4 {
     background: {
-        image: url(../../assets/img/slide2.jpg);
+        image: url(https://webeefy.com/uticome2/assets/images/slider/slider2.jpg);
         position: top left!important;
     };
 }
 .item-bg5 {
     background: {
-        image: url(../../assets/img/slide2.jpg);
+        image: url(https://webeefy.com/uticome2/assets/images/slider/slide1.jpg);
     };
 }
 .item-bg6 {
     background: {
-        image: url(../../assets/img/slide2.jpg);
+        image: url(https://webeefy.com/uticome2/assets/images/slider/slider2.jpg);
     };
 }
 .item-bg7 {
     background: {
-        image: url(../../assets/img/slide2.jpg );
+        image: url(https://webeefy.com/uticome2/assets/images/slider/slider1.jpg);
     };
 }
 .banner-section {
