--- a/uticonew/assets/css/style.css
+++ b/uticonew/assets/css/style.css
@@ -4204,11 +4204,11 @@ Our Mission Area CSS
 }
 
 .mission-image.bg-1 {
-  background-image: url(../../assets/img/mission-img1.jpg);
+  background-image: url(https://webeefy.com/uticome2/assets/images/about/pic11.jpg);
 }
 
 .mission-image.bg-2 {
-  background-image: url(../../assets/img/mission-img2.jpg);
+  background-image: url(https://webeefy.com/uticome2/assets/images/portfolio/portfolio-1/image_7.jpg);
 }
 
 .mission-image img {
