--- a/uticonew/assets/css/style.scss
+++ b/uticonew/assets/css/style.scss
@@ -3020,7 +3020,7 @@ Why Choose Us Area CSS
 .why-choose-us-content {
     background: {
         color: $black-color;
-        image: url(../../assets/img/c3.jpg);
+        image: url(https://webeefy.com/uticome2/assets/images/slider/slide2.jpg);
         position: right center;
         size: cover;
         repeat: no-repeat;
@@ -3128,17 +3128,17 @@ Why Choose Us Area CSS
     };
     &.bg1 {
         background: {
-            image: url(../../assets/img/why-choose-img1.jpg);
+            image: url(../../assets/img/c3.jpg);
         };
     }
     &.bg2 {
         background: {
-            image: url(../../assets/img/why-choose-img2.jpg);
+            image: url(../../assets/img/c1.jpg);
         };
     }
     &.bg3 {
         background: {
-            image: url(../../assets/img/why-choose-img3.jpg);
+            image: url(../../assets/img/c3.jpg);
         };
     }
     img {
@@ -4789,17 +4789,17 @@ Achievements Area CSS
     };
     &.bg1 {
         background: {
-            image: url(../../assets/img/achievements-img1.jpg);
+            image: url(../../assets/img/m2.jpg);
         };
     }
     &.bg2 {
         background: {
-            image: url(../../assets/img/achievements-img2.jpg);
+            image: url(../../assets/img/m2.jpg);
         };
     }
     &.bg3 {
         background: {
-            image: url(../../assets/img/achievements-img3.jpg);
+            image: url(../../assets/img/m2.jpg);
         };
     }
     img {
