--- a/uticonew/assets/css/style.css
+++ b/uticonew/assets/css/style.css
@@ -1807,16 +1807,16 @@ Main Banner Area CSS
 }
 
 .item-bg1 {
-  background-image: url(https://webeefy.com/uticome2/assets/images/slider/slide1.jpg);
+  background-image: url(../../assets/img/banner/img2.jpg);
 }
 
 .item-bg2 { 
-  background-image: url(https://webeefy.com/uticome2/assets/images/slider/slide2.jpg);
+  background-image: url(../../assets/img/banner/img3.jpg);
   background-position: right top !important;
 }
 
 .item-bg3 {
-  background-image: url(https://webeefy.com/uticome2/assets/images/slider/slider1.jpg);
+  background-image: url(../../assets/img/banner/img2.jpg);
   background-position: center top !important;
 }
 
@@ -1826,7 +1826,7 @@ Main Banner Area CSS
 }
 
 .item-bg5 {
-  background-image: url(https://webeefy.com/uticome2/assets/images/slider/slide1.jpg);
+  background-image: url(../../assets/img/banner/img2.jpg);
 }
 
 .item-bg6 {
@@ -1834,7 +1834,7 @@ Main Banner Area CSS
 }
 
 .item-bg7 {
-  background-image: url(https://webeefy.com/uticome2/assets/images/slider/slide1.jpg);
+  background-image: url(../../assets/img/banner/img2.jpg);
 }
 
 .banner-section {
