--- a/uticonew/assets/css/style.scss
+++ b/uticonew/assets/css/style.scss
@@ -1898,18 +1898,18 @@ Main Banner Area CSS
 }
 .item-bg1 {
     background: {
-        image: url(https://webeefy.com/uticome2/assets/images/slider/slide1.jpg);
+        image: url(../../assets/img/banner/img2.jpg);
     };
 }
 .item-bg2 {
     background: {
-        image: url(https://webeefy.com/uticome2/assets/images/slider/slide2.jpg);
+        image: url(../../assets/img/banner/img3.jpg);
         position: right top !important;
     };
 }
 .item-bg3 {
     background: {
-        image: url(https://webeefy.com/uticome2/assets/images/slider/slider1.jpg);
+        image: url(../../assets/img/banner/img2.jpg);
         position: center top !important;
     };
 }
@@ -1921,7 +1921,7 @@ Main Banner Area CSS
 }
 .item-bg5 {
     background: {
-        image: url(https://webeefy.com/uticome2/assets/images/slider/slide1.jpg);
+        image: url(../../assets/img/banner/img2.jpg);
     };
 }
 .item-bg6 {
@@ -1931,7 +1931,7 @@ Main Banner Area CSS
 }
 .item-bg7 {
     background: {
-        image: url(https://webeefy.com/uticome2/assets/images/slider/slider1.jpg);
+        image: url(../../assets/img/banner/img2.jpg);
     };
 }
 .banner-section {
