--- a/new1/assets/css/style.css
+++ b/new1/assets/css/style.css
@@ -1142,7 +1142,7 @@ header.style3 {top: -40px;}
   padding: 0;
   right:5px;
   bottom: 0;
-  background-color: #086ad8;
+  background-color: #00c1de;
   color: #fff;
   margin-bottom: 5px;
   margin-top: 6px;
@@ -4778,7 +4778,7 @@ footer {
 .pst-inf-styl3 > a {
   line-height: 37px;
   width: 37px;
-  background-color: #086ad8;
+  background-color: #00c1de;
   display: inline-block;
   text-align: center;
   -webkit-border-radius: 50%;
