--- a/uticonew/assets/css/style.scss
+++ b/uticonew/assets/css/style.scss
@@ -52,8 +52,8 @@ Default CSS
 
 $main-font-family: 'Open Sans', sans-serif;
 $optional-font-family: 'Roboto', sans-serif;
-$main-color: #3aade1;
-$black-color: #002e5b;
+$main-color: #3dae2b;
+$black-color: #00c1de;
 $white-color: #ffffff;
 $paragraph-color: #666666;
 $font-size: 15px;
